# wiki-coding

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  npm-release.yml
.planning/: INGEST-CONFLICTS.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  SPEC.md  STATE.md  config.json  ingest-manifest.yml  v1.0-MILESTONE-AUDIT.md
.planning/intel/: SYNTHESIS.md  constraints.md  context.md  decisions.md  requirements.md
capabilities/: README.md
capabilities/catalogs/: mcp.v1.json  projects.v1.json  skills.v1.json
crates/cli/: Cargo.toml
crates/cli/src/: app.rs  binding.rs  config.rs  doctor.rs  driver.rs  headless.rs  index.rs  lib.rs  main.rs  maintenance.rs  migration.rs  wiki.rs
crates/cli/tests/: discovery_commands.rs  headless.rs  index_commands.rs  internal_shell_host.rs  lifecycle_wiki.rs  migration.rs  product_identity.rs  restart.rs  state_authority.rs  tool_loop.rs  vault_commands.rs  wiki_workflow.rs
crates/compat-harness/: Cargo.toml
crates/compat-harness/src/: architecture.rs  baseline.rs  coverage.rs  lib.rs  main.rs  manifest.rs  migration_support.rs  provider_eval.rs  report.rs  retrieval_eval.rs  source_authority.rs
crates/compat-harness/tests/: compat_report.rs  coverage.rs  migration_support.rs  provider_eval.rs  retrieval_eval.rs  source_authority.rs
crates/core/: Cargo.toml
crates/protocol/: Cargo.toml
crates/provider/: Cargo.toml
crates/provider/src/: chat_completions.rs  client.rs  config.rs  credentials.rs  fixture_protocol.rs  lib.rs  reasoning_filter.rs  responses.rs  sse.rs
crates/provider/tests/: config_credentials.rs  http_stream.rs  provider_fixtures.rs
crates/retrieval/: Cargo.toml
crates/tools/: Cargo.toml
crates/tools/src/: adapter.rs  error.rs  git.rs  lib.rs  npm.rs  path.rs  policy.rs  process.rs  read.rs  sandbox.rs  write.rs
crates/tools/src/shell/: backend.rs  buffer.rs  command.rs  host.rs  manager.rs  mod.rs  native.rs  session.rs
crates/tools/tests/: process_tools.rs  sandbox_adversarial.rs  shell_buffer.rs  shell_host_process.rs  shell_manager.rs  shell_pty.rs  shell_tools.rs  tool_schemas.rs  workspace_tools.rs
crates/tui/: Cargo.toml
crates/tui/src/: command.rs  lib.rs  render.rs  shell.rs
crates/tui/tests/: command_render.rs
crates/vault/: Cargo.toml
crates/vault/src/: bootstrap.rs  forget.rs  gc.rs  inbox.rs  lib.rs  lint.rs  page.rs  path.rs  raw.rs  rebuild.rs  transaction.rs  workflow.rs
crates/vault/src/runtime/: index.rs  journal.rs  lease.rs  mod.rs  recovery.rs
crates/vault/tests/: inbox_import.rs  knowledge_store.rs  maintenance.rs  raw_evidence.rs  retention.rs  runtime_store.rs  vault_bootstrap.rs  wiki_transaction.rs
crates/windows-conpty/: Cargo.toml
crates/windows-conpty/src/: lib.rs  windows.rs
docs/: capability-workspace.md  embedding-resource-package.md
docs/release/: cutover.md  embedding-package.md  install-upgrade-rollback.md  subprocess-sandbox.md
docs/verification/: coding-agent-execution-plane.md
fixtures/compat/: baseline-status.v1.json  command-differences.v1.json  commands.v1.json  providers.v1.json  public-contract.v1.json  report.expected.json  source-authority.v1.json
scripts/: ci-linux-sandbox-canary.sh
scripts/release/: package-contract.mjs  package-contract.test.mjs  package-rust.mjs  product-fingerprint.mjs  verify-milestone-flow.mjs  verify-rust-release.mjs
src/: cli.tsx  protocol.ts  types.ts
src/agent/: agent-budget.ts  agent-checkpoint.ts  agent-context-builder.ts  agent-item.ts  model-action.ts
src/capabilities/: builtin-capabilities.ts  capability-catalog.ts  capability-dispatcher.ts  capability-invocation.ts  capability-manifest.ts  capability-report-service.ts  capability-snapshot.ts  execution-limits.ts  local-capability-runtime.ts  path-policy.ts  policy-engine.ts  refresh-coordinator.ts  snapshot-store.ts  source-adapter.ts  source-precedence.ts  types.ts
src/config/: config-manager.ts  credential-store.ts  feature-flags.ts  model-state-store.ts  provider-config.ts  provider-security.ts  secret-store.ts  user-config-root.ts  user-profile-store.ts
src/eval/: capability-retrieval-report.ts  provider-conformance.ts
src/providers/: builtin-provider-adapter.ts  http-transport.ts  model-profile.ts  provider-adapter-registry.ts  provider-adapter.ts  provider-error.ts  provider-gateway.ts  provider-model-adapter.ts  provider-profile.ts  provider-protocol.ts  reasoning-filter.ts
src/runtime/: agent-run-engine.ts  agent-runtime.ts  application-kernel.ts  command-arbiter.ts  command-dispatcher.ts  context-engine.ts  context-manager.ts  model-adapter.ts  model-profile-registry.ts  model-runtime.ts  model-selection-service.ts  permission-service.ts  profile-setup-service.ts  provider-service.ts  runtime-application.ts  session-service.ts  shutdown-coordinator.ts  (+5 more)
test/: agent-budget.test.ts  agent-item-storage.test.ts  agent-local-runtime-integration.test.ts  agent-route-cutover.test.ts  agent-run-engine.test.ts  agent-run-recovery.test.ts  agent-runtime-compaction.test.ts  agent-runtime-interrupt.test.ts  agent-runtime-provider-trace.test.ts  agent-runtime-recovery.test.ts  agent-ui-state.test.ts  application-kernel.test.ts  capability-bm25.test.ts  capability-catalog.test.ts  capability-commands.test.ts  capability-dispatcher.test.ts  capability-exact-resolution.test.ts  capability-facet-index.test.ts  capability-hybrid-retrieval.test.ts  capability-manifest.test.ts  capability-policy-engine.test.ts  capability-query-normalizer.test.ts  capability-refresh.test.ts  capability-retrieval-eval.test.ts  capability-retrieval-report.test.ts  capability-rrf.test.ts  capability-snapshot.test.ts  capability-source-adapters.test.ts  chat-input-policy.test.ts  ci-contract.test.ts  ci-contract.ts  cli-lifecycle.test.ts  command-arbiter.test.ts  command-dispatcher.test.ts  config-manager.test.ts  context-manager.test.ts  credential-consent.test.ts  embedding-resource.test.ts  embedding-runtime.test.ts  feature-flags.test.ts  (+49 more)
(+314 files in other folders)
