[workspace]
resolver = "3"
members = [
  "crates/protocol",
  "crates/core",
  "crates/provider",
  "crates/tools",
  "crates/retrieval",
  "crates/vault",
  "crates/tui",
  "crates/cli",
  "crates/compat-harness",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
crossterm = "=0.29.0"
fs4 = "=1.1.0"
futures-util = "=0.3.32"
is-terminal = "=0.4.17"
keyring = { version = "=3.6.3", default-features = false }
reqwest = { version = "=0.13.4", default-features = false, features = ["json", "stream"] }
secrecy = "=0.10.3"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
tokio = { version = "=1.52.3", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "=0.7.18", features = ["rt"] }
tempfile = "=3.27.0"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
unwrap_used = "warn"
