[workspace]
resolver = "3"
members = [
  "crates/protocol",
  "crates/core",
  "crates/provider",
  "crates/tools",
  "crates/retrieval",
  "crates/vault",
  "crates/tui",
  "crates/cli",
  "crates/compat-harness",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.97"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
clap = { version = "=4.6.1", features = ["derive"] }
crossterm = "=0.29.0"
fs4 = "=1.1.0"
futures-util = "=0.3.32"
getrandom = "=0.4.3"
is-terminal = "=0.4.17"
keyring = { version = "=3.6.3", default-features = false }
portable-pty = "=0.9.0"
reqwest = { version = "=0.13.4", default-features = false, features = ["json", "stream"] }
rustix = { version = "=1.1.4", features = ["fs", "process"] }
win32job = "=2.0.3"
secrecy = "=0.10.3"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = { version = "=0.11.0", default-features = false }
tokio = { version = "=1.52.3", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "=0.7.18", features = ["rt"] }
tempfile = "=3.27.0"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
unwrap_used = "warn"
