[package]
name = "minimax-provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
minimax-core = { path = "../core" }
minimax-protocol = { path = "../protocol" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
