[package]
name = "minimax-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
minimax-core = { path = "../core" }
minimax-protocol = { path = "../protocol" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
tokio.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
rustix.workspace = true

[lints]
workspace = true
