[package]
name = "minimax-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
filedescriptor.workspace = true
getrandom.workspace = true
minimax-core = { path = "../core" }
minimax-protocol = { path = "../protocol" }
portable-pty.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
tokio.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
rustix.workspace = true
signal-hook.workspace = true

[target.'cfg(windows)'.dependencies]
minimax-windows-conpty = { path = "../windows-conpty" }
win32job.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
