[package]
name = "minimax-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
is-terminal.workspace = true
minimax-protocol = { path = "../protocol" }
serde_json.workspace = true

[target.'cfg(not(target_abi = "llvm"))'.dependencies]
crossterm.workspace = true

[lints]
workspace = true
