[package]
name = "minimax-vault"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
fs4.workspace = true
minimax-core = { path = "../core" }
minimax-protocol = { path = "../protocol" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
