[package]
name = "minimax-vault"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
fs4.workspace = true
minimax-core = { path = "../core" }
minimax-protocol = { path = "../protocol" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true

[dev-dependencies]

[lints]
workspace = true
