[package]
name = "minimax-windows-conpty"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[target.'cfg(windows)'.dependencies]
win32job.workspace = true
windows-sys = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Console",
  "Win32_System_IO",
  "Win32_System_Pipes",
  "Win32_System_Threading",
] }

[lints.rust]
unsafe_code = "allow"
unused_must_use = "deny"
unreachable_pub = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
unwrap_used = "warn"
